# 3phase-engine-diagnosis

./: DL.ipynb  EDA.ipynb  README.md  detect.py  engine_config.py  pyproject.toml
data/: 0702  межвитковые фазы A ток фазы А.txt  20_01_1460_об_мин_с_дисбалансом_ротора.txt  21 02 дисбаланс макс обороты 100%.txt
src/detection/: __init__.py  freqs.py
src/utils/: data.py
