[tool.poetry]
name = "engine-defect-detector"
version = "0.1.0"
description = "Repository for engine defect detection"
authors = ["Artem Ryzhikov <artemryzhikov@gmail.com>"]
readme = "README.md"
packages = [{include = "engine_defect_detector"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
numpy = "^1.24.2"
scipy = "^1.10.1"
noisereduce = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
